[package]
name = "utf-railroad"
version = "1.1.0"
authors = ["Amber Thrall <amber@thrall.me>"]
description = "Generate text railroad diagrams in rust."
readme = "README.md"
homepage = "https://github.com/AmberThrall/utf-railroad"
repository = "https://github.com/AmberThrall/utf-railroad"
license = "MIT"
keywords = ["utf", "railroad"]
categories = ["visualization"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
